# MyGarden

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  main.py
app/auth/: oauth2.py
app/db/: mongo.py
app/functions/: security.py  species_migration.py
app/models/: plant.py  species.py  user.py
app/routes/: plants.py  reminders.py  species.py  users.py
frontend/: main.py
frontend/pages/: add_plant.py  login.py  plants.py  precised_plant.py  register.py
